# Playground

./: README.md  mtg_unstable_rolls.py  pyproject.toml
aaron_renfroe-2018-01-09/: main.py  main2.py
cbu-csse/: fizzbuzz.py
dnd/: out.csv
dnd/omari_cbu/: .gitignore  notes.txt  runes.csv  runes.py  runes_converted.csv
graph-traversal/: main.py
learnpython/2017-12-12/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
nqueens/: 1.txt  10.txt  11.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  lol.py  main.py  nqueens.py
opencv-play/: Pipfile  edges.py  interactive_color_filter.py  list_cameras.py  livevideo.py  mouse.py  sentdex_3.py  sentdex_4.py  sentdex_corners.py  sentdex_faces.py  sentdex_gradients.py  sentdex_smoothing.py  test1.py
spelling_correction/: main.py
voldemort/: american-english  google-10000-english-usa.txt  main.py  so_solution.py  voldemort-so.txt  voldemorts.txt
wireframe/soundboard-design/: styles.css
