[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Christopher Chen <christopher.chen1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
numpy = "^1.21.0"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
